--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#409eff">
   <title>TechBlogCore.Vue</title>
   <style>
-    pre > code {
-      border-radius: 5px;
+    @font-face {
+      font-family: 'Trebuchet MS';
+      src: url('/src/assets/trebuc.ttf')
+    }
+
+    pre {
+      border-radius: 6px !important;
     }
 
     .hljs {
@@ -23,6 +29,32 @@
     body {
       margin: 0;
       min-height: 100vh;
+    }
+
+    body::-webkit-scrollbar {
+      width: 6px;
+    }
+
+    body::-webkit-scrollbar-thumb {
+      background-color: #0003;
+      border-radius: 10px;
+      transition: all .2s ease-in-out;
+    }
+
+    body::-webkit-scrollbar-track {
+      border-radius: 10px;
+    }
+
+    .el-drawer__body {
+      padding: .2rem !important;
+    }
+
+    html {
+      --header-shadow: 0px 0px 12px rgba(0, 0, 0, .12);
+    }
+
+    html.dark {
+      --header-shadow: 0px 0px;
     }
   </style>
 </head>
