--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="/src/assets/index.css" rel="stylesheet" type="text/css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#16161e">
-  <title>TechBlogCore.Vue</title>
+  <title>BlogCore.Vue</title>
 </head>
 
 <body class="regular-scrollbar">
