--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/favicon.ico" />
   <link href="/src/assets/index.css" rel="stylesheet" type="text/css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#16161e">
+  <meta name="theme-color" content="#188dbf">
   <title>BlogCore.Vue</title>
 </head>
 
