--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="/src/assets/index.css" rel="stylesheet" type="text/css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <meta name="theme-color" content="#188dbf">
-  <title>LuckyStar's Blog</title>
+  <title>Star's Blog</title>
 </head>
 
 <body class="regular-scrollbar">
