--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 
 <body class="regular-scrollbar">
   <div id="app"></div>
+  <script>
+    (function() {
+      let color = localStorage.getItem("TechBlog_ThemeColor");
+      if (color === 'dark') {
+        document.documentElement.classList.add("dark");
+      }
+    })();
+  </script>
   <script type="module" src="/src/main.ts"></script>
 </body>
 
